@@ -139,3 +139,4 @@
 <!ENTITY euskalbar.stats.hizteues "Combined (Euskalterm, 3000, Elhuyar)">
 <!ENTITY euskalbar.stats.sineues "Combined (ADOREZ, UZEI)">
 <!ENTITY euskalbar.stats.hizteuen "Combined (Euskalterm, Morris)">
+<!ENTITY euskalbar.stats.clearbutton "Clear statistics">
