@@ -138,3 +138,4 @@
 <!ENTITY euskalbar.stats.hizteues "Combinado (Euskalterm, 3000, Elhuyar)">
 <!ENTITY euskalbar.stats.sineues "Combinado (ADOREZ, UZEI)">
 <!ENTITY euskalbar.stats.hizteuen "Combinado (Euskalterm, Morris)">
+<!ENTITY euskalbar.stats.clearbutton "Borrar estadísticas">
