@@ -139,4 +139,5 @@
 <!ENTITY euskalbar.stats.hizteues "Konbinatua (Euskalterm, 3000, Elhuyar)">
 <!ENTITY euskalbar.stats.sineues "Konbinatua (ADOREZ, UZEI)">
 <!ENTITY euskalbar.stats.hizteuen "Konbinatua (Euskalterm, Morris)">
+<!ENTITY euskalbar.stats.clearbutton "Garbitu estatistikak">
 
