@@ -7,6 +7,7 @@
 - Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
 - Azalak sortu dira. (#14)
 - Estatistika lokalak sortu dira. (#4)
+- Estatistika lokalak ezabatzeko botoi bat gehitu zaio estatistiken leihoari (#23)
 - 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
 - Elhuyarren azpisarrerak kontsultatzean azentu markekin zegoen arazoa konpondu da. (#13)
 - Open-Tran hiztegiak fitxak berrerabiltzeko zuen arazoa konpodu da. (#12)
